--- a/IOTNodesvc/IOTNodesvc.csproj
+++ b/IOTNodesvc/IOTNodesvc.csproj
@@ -93,6 +93,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="iniFileReader.cs" />
     <Compile Include="IOTNodesvc.svc.cs">
       <DependentUpon>IOTNodesvc.svc</DependentUpon>
     </Compile>
